correct overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,5 @@
 
 body{
   font-family: 'Inter', sans-serif;
+  background-color: #F2F2F2;
 }
